ADD_CUSTOM_COMMAND(
    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/license.cpp
    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/genstring.py
        license_msg
        ${CMAKE_CURRENT_BINARY_DIR}/license.cpp
        ${CMAKE_SOURCE_DIR}/Copying/COPYING
    MAIN_DEPENDENCY ${CMAKE_SOURCE_DIR}/Copying/COPYING
    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/genstring.py
    )

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})

YASM_ADD_EXECUTABLE(ygas RUN_UNINSTALLED
    ygas.cpp
    TextDiagnosticPrinter.cpp
    )

SET_SOURCE_FILES_PROPERTIES(ygas.cpp PROPERTIES
    OBJECT_DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/license.cpp"
    )

INSTALL(TARGETS ygas RUNTIME DESTINATION ${BIN_INSTALL_DIR})
